<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:fontFamily="@font/roboto_regular"
                 android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
           android:icon="@drawable/ic_name"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_slideshow" />


        <item
            android:id="@+id/nav_about"
             android:icon="@drawable/aboutus"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_contact"
             android:icon="@drawable/ic_contactus"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_contect" />

        <item
            android:id="@+id/nav_shareapp"
            android:icon="@drawable/ic_share"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_shareapp" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout2"
            android:fontFamily="@font/roboto_regular"
            android:title="@string/menu_logout" />
    </group>


</menu>
