<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/we_have_sent_an_code_on_your_email"
            android:textAlignment="center"
            android:textColor="#4a4d4b"
            android:textSize="17sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/orange"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/enter_your_valid_email"
                app:placeholderTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/dim_1">

                <EditText
                    android:id="@+id/email_forget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:letterSpacing="0.025"
                    android:maxLength="60"
                    android:padding="15dp"

                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/button_bg_white_round" />

                <TextView
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:letterSpacing="0.025"
                    android:text="@string/reset_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/back_to_login"/>

    </LinearLayout>
</RelativeLayout>






