<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"


    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
     app:cardBackgroundColor="@color/purple_500"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:letterSpacing="0.025"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/my_profile"
                android:textSize="18sp"> </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="645dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_gravity="center"-->
        <!--            app:cardBackgroundColor="@color/white"-->
        <!--            app:cardCornerRadius="250dp"-->
        <!--            app:cardElevation="2dp">-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo" />

        <!--        </androidx.cardview.widget.CardView>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:layout_marginTop="45dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/your_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/user_name"
                        android:layout_marginTop="15dp"
                        android:background="#50000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/your_email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/user_email"
                        android:layout_marginTop="15dp"
                        android:background="#50000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.025"
                        android:text="@string/your_phone"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/user_phone"
                        android:layout_marginTop="15dp"
                        android:background="#50000000" />
                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>