<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

     android:background="@drawable/background"
    android:gravity="center"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background"
                android:gravity="center" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Grocery Mart"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/roboto_regular"

            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:src="@drawable/app_logo">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/orange"

            android:gravity="center"
            android:orientation="vertical"

            >


            <RelativeLayout
                android:layout_width="270dp"
                android:layout_height="50dp"

                android:layout_marginTop="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/button_bg_white_round"

                    />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:letterSpacing="0.025"
                    android:text="@string/login_txt"

                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/button_bg_white_round" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:letterSpacing="0.025"
                    android:text="@string/register_text"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/skip_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>